sdk-docs_versioned_docs/version-19.0.0/enums/Types/EventIdEnum/EventIdEnum.md
---
id: "EventIdEnum"
title: "Enumeration: EventIdEnum"
sidebar_label: "EventIdEnum"
---

[types](../../../modules/Types/Types.md).EventIdEnum

## Enumeration Members

### AcceptedPayingKey

• **AcceptedPayingKey** = ``"AcceptedPayingKey"``

#### Defined in

[middleware/types.ts:906](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L906)

___

### AccountBalanceBurned

• **AccountBalanceBurned** = ``"AccountBalanceBurned"``

#### Defined in

[middleware/types.ts:674](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L674)

___

### ActiveLimitChanged

• **ActiveLimitChanged** = ``"ActiveLimitChanged"``

#### Defined in

[middleware/types.ts:710](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L710)

___

### ActivePipLimitChanged

• **ActivePipLimitChanged** = ``"ActivePipLimitChanged"``

#### Defined in

[middleware/types.ts:833](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L833)

___

### AdminChanged

• **AdminChanged** = ``"AdminChanged"``

#### Defined in

[middleware/types.ts:724](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L724)

___

### AffirmationWithdrawn

• **AffirmationWithdrawn** = ``"AffirmationWithdrawn"``

#### Defined in

[middleware/types.ts:863](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L863)

___

### AgentAdded

• **AgentAdded** = ``"AgentAdded"``

#### Defined in

[middleware/types.ts:902](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L902)

___

### AgentRemoved

• **AgentRemoved** = ``"AgentRemoved"``

#### Defined in

[middleware/types.ts:903](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L903)

___

### AllGood

• **AllGood** = ``"AllGood"``

#### Defined in

[middleware/types.ts:762](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L762)

___

### Approval

• **Approval** = ``"Approval"``

#### Defined in

[middleware/types.ts:922](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L922)

___

### Approved

• **Approved** = ``"Approved"``

#### Defined in

[middleware/types.ts:699](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L699)

___

### AssetCompliancePaused

• **AssetCompliancePaused** = ``"AssetCompliancePaused"``

#### Defined in

[middleware/types.ts:806](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L806)

___

### AssetComplianceReplaced

• **AssetComplianceReplaced** = ``"AssetComplianceReplaced"``

#### Defined in

[middleware/types.ts:803](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L803)

___

### AssetComplianceReset

• **AssetComplianceReset** = ``"AssetComplianceReset"``

#### Defined in

[middleware/types.ts:804](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L804)

___

### AssetComplianceResumed

• **AssetComplianceResumed** = ``"AssetComplianceResumed"``

#### Defined in

[middleware/types.ts:805](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L805)

___

### AssetCreated

• **AssetCreated** = ``"AssetCreated"``

#### Defined in

[middleware/types.ts:770](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L770)

___

### AssetDidRegistered

• **AssetDidRegistered** = ``"AssetDidRegistered"``

#### Defined in

[middleware/types.ts:686](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L686)

___

### AssetFrozen

• **AssetFrozen** = ``"AssetFrozen"``

#### Defined in

[middleware/types.ts:778](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L778)

___

### AssetOwnershipTransferred

• **AssetOwnershipTransferred** = ``"AssetOwnershipTransferred"``

#### Defined in

[middleware/types.ts:777](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L777)

___

### AssetPurchased

• **AssetPurchased** = ``"AssetPurchased"``

#### Defined in

[middleware/types.ts:923](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L923)

___

### AssetRenamed

• **AssetRenamed** = ``"AssetRenamed"``

#### Defined in

[middleware/types.ts:780](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L780)

___

### AssetRuleChanged

• **AssetRuleChanged** = ``"AssetRuleChanged"``

#### Defined in

[middleware/types.ts:924](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L924)

___

### AssetRuleRemoved

• **AssetRuleRemoved** = ``"AssetRuleRemoved"``

#### Defined in

[middleware/types.ts:925](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L925)

___

### AssetRulesPaused

• **AssetRulesPaused** = ``"AssetRulesPaused"``

#### Defined in

[middleware/types.ts:926](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L926)

___

### AssetRulesReplaced

• **AssetRulesReplaced** = ``"AssetRulesReplaced"``

#### Defined in

[middleware/types.ts:927](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L927)

___

### AssetRulesReset

• **AssetRulesReset** = ``"AssetRulesReset"``

#### Defined in

[middleware/types.ts:928](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L928)

___

### AssetRulesResumed

• **AssetRulesResumed** = ``"AssetRulesResumed"``

#### Defined in

[middleware/types.ts:929](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L929)

___

### AssetStatsUpdated

• **AssetStatsUpdated** = ``"AssetStatsUpdated"``

#### Defined in

[middleware/types.ts:883](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L883)

___

### AssetUnfrozen

• **AssetUnfrozen** = ``"AssetUnfrozen"``

#### Defined in

[middleware/types.ts:779](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L779)

___

### AuthorizationAdded

• **AuthorizationAdded** = ``"AuthorizationAdded"``

#### Defined in

[middleware/types.ts:687](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L687)

___

### AuthorizationConsumed

• **AuthorizationConsumed** = ``"AuthorizationConsumed"``

#### Defined in

[middleware/types.ts:690](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L690)

___

### AuthorizationRejected

• **AuthorizationRejected** = ``"AuthorizationRejected"``

#### Defined in

[middleware/types.ts:689](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L689)

___

### AuthorizationRetryLimitReached

• **AuthorizationRetryLimitReached** = ``"AuthorizationRetryLimitReached"``

#### Defined in

[middleware/types.ts:691](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L691)

___

### AuthorizationRevoked

• **AuthorizationRevoked** = ``"AuthorizationRevoked"``

#### Defined in

[middleware/types.ts:688](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L688)

___

### AuthorizedPayingKey

• **AuthorizedPayingKey** = ``"AuthorizedPayingKey"``

#### Defined in

[middleware/types.ts:905](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L905)

___

### BalanceSet

• **BalanceSet** = ``"BalanceSet"``

#### Defined in

[middleware/types.ts:673](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L673)

___

### BallotCancelled

• **BallotCancelled** = ``"BallotCancelled"``

#### Defined in

[middleware/types.ts:930](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L930)

___

### BallotCreated

• **BallotCreated** = ``"BallotCreated"``

#### Defined in

[middleware/types.ts:931](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L931)

___

### BatchCompleted

• **BatchCompleted** = ``"BatchCompleted"``

#### Defined in

[middleware/types.ts:898](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L898)

___

### BatchInterrupted

• **BatchInterrupted** = ``"BatchInterrupted"``

#### Defined in

[middleware/types.ts:896](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L896)

___

### BatchOptimisticFailed

• **BatchOptimisticFailed** = ``"BatchOptimisticFailed"``

#### Defined in

[middleware/types.ts:897](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L897)

___

### BenefitClaimed

• **BenefitClaimed** = ``"BenefitClaimed"``

#### Defined in

[middleware/types.ts:794](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L794)

___

### Bonded

• **Bonded** = ``"Bonded"``

#### Defined in

[middleware/types.ts:745](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L745)

___

### BridgeLimitUpdated

• **BridgeLimitUpdated** = ``"BridgeLimitUpdated"``

#### Defined in

[middleware/types.ts:732](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L732)

___

### BridgeTxScheduleFailed

• **BridgeTxScheduleFailed** = ``"BridgeTxScheduleFailed"``

#### Defined in

[middleware/types.ts:735](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L735)

___

### BridgeTxScheduled

• **BridgeTxScheduled** = ``"BridgeTxScheduled"``

#### Defined in

[middleware/types.ts:734](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L734)

___

### Bridged

• **Bridged** = ``"Bridged"``

#### Defined in

[middleware/types.ts:726](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L726)

___

### CaInitiated

• **CaInitiated** = ``"CAInitiated"``

#### Defined in

[middleware/types.ts:815](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L815)

___

### CaLinkedToDoc

• **CaLinkedToDoc** = ``"CALinkedToDoc"``

#### Defined in

[middleware/types.ts:816](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L816)

___

### CaRemoved

• **CaRemoved** = ``"CARemoved"``

#### Defined in

[middleware/types.ts:817](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L817)

___

### CaaTransferred

• **CaaTransferred** = ``"CAATransferred"``

#### Defined in

[middleware/types.ts:814](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L814)

___

### CallLookupFailed

• **CallLookupFailed** = ``"CallLookupFailed"``

#### Defined in

[middleware/types.ts:855](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L855)

___

### Canceled

• **Canceled** = ``"Canceled"``

#### Defined in

[middleware/types.ts:853](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L853)

___

### CddClaimsInvalidated

• **CddClaimsInvalidated** = ``"CddClaimsInvalidated"``

#### Defined in

[middleware/types.ts:693](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L693)

___

### CddRequirementForMasterKeyUpdated

• **CddRequirementForMasterKeyUpdated** = ``"CddRequirementForMasterKeyUpdated"``

#### Defined in

[middleware/types.ts:932](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L932)

___

### CddRequirementForPrimaryKeyUpdated

• **CddRequirementForPrimaryKeyUpdated** = ``"CddRequirementForPrimaryKeyUpdated"``

#### Defined in

[middleware/types.ts:692](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L692)

___

### CddStatus

• **CddStatus** = ``"CddStatus"``

#### Defined in

[middleware/types.ts:921](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L921)

___

### CheckpointCreated

• **CheckpointCreated** = ``"CheckpointCreated"``

#### Defined in

[middleware/types.ts:797](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L797)

___

### ClaimAdded

• **ClaimAdded** = ``"ClaimAdded"``

#### Defined in

[middleware/types.ts:684](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L684)

___

### ClaimRevoked

• **ClaimRevoked** = ``"ClaimRevoked"``

#### Defined in

[middleware/types.ts:685](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L685)

___

### ClassicTickerClaimed

• **ClassicTickerClaimed** = ``"ClassicTickerClaimed"``

#### Defined in

[middleware/types.ts:785](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L785)

___

### Cleared

• **Cleared** = ``"Cleared"``

#### Defined in

[middleware/types.ts:918](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L918)

___

### Closed

• **Closed** = ``"Closed"``

#### Defined in

[middleware/types.ts:933](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L933)

___

### CodeRemoved

• **CodeRemoved** = ``"CodeRemoved"``

#### Defined in

[middleware/types.ts:914](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L914)

___

### CodeStored

• **CodeStored** = ``"CodeStored"``

#### Defined in

[middleware/types.ts:912](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L912)

___

### CodeUpdated

• **CodeUpdated** = ``"CodeUpdated"``

#### Defined in

[middleware/types.ts:665](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L665)

___

### CoefficientSet

• **CoefficientSet** = ``"CoefficientSet"``

#### Defined in

[middleware/types.ts:850](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L850)

___

### CommissionCapUpdated

• **CommissionCapUpdated** = ``"CommissionCapUpdated"``

#### Defined in

[middleware/types.ts:752](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L752)

___

### ComplianceRequirementChanged

• **ComplianceRequirementChanged** = ``"ComplianceRequirementChanged"``

#### Defined in

[middleware/types.ts:807](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L807)

___

### ComplianceRequirementCreated

• **ComplianceRequirementCreated** = ``"ComplianceRequirementCreated"``

#### Defined in

[middleware/types.ts:801](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L801)

___

### ComplianceRequirementRemoved

• **ComplianceRequirementRemoved** = ``"ComplianceRequirementRemoved"``

#### Defined in

[middleware/types.ts:802](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L802)

___

### ContractCodeUpdated

• **ContractCodeUpdated** = ``"ContractCodeUpdated"``

#### Defined in

[middleware/types.ts:915](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L915)

___

### ContractEmitted

• **ContractEmitted** = ``"ContractEmitted"``

#### Defined in

[middleware/types.ts:913](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L913)

___

### ContractExecution

• **ContractExecution** = ``"ContractExecution"``

#### Defined in

[middleware/types.ts:934](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L934)

___

### ControllerChanged

• **ControllerChanged** = ``"ControllerChanged"``

#### Defined in

[middleware/types.ts:723](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L723)

___

### ControllerRedemption

• **ControllerRedemption** = ``"ControllerRedemption"``

#### Defined in

[middleware/types.ts:935](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L935)

___

### ControllerTransfer

• **ControllerTransfer** = ``"ControllerTransfer"``

#### Defined in

[middleware/types.ts:786](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L786)

___

### Created

• **Created** = ``"Created"``

#### Defined in

[middleware/types.ts:793](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L793)

___

### CustodyAllowanceChanged

• **CustodyAllowanceChanged** = ``"CustodyAllowanceChanged"``

#### Defined in

[middleware/types.ts:936](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L936)

___

### CustodyTransfer

• **CustodyTransfer** = ``"CustodyTransfer"``

#### Defined in

[middleware/types.ts:937](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L937)

___

### CustomAssetTypeExists

• **CustomAssetTypeExists** = ``"CustomAssetTypeExists"``

#### Defined in

[middleware/types.ts:787](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L787)

___

### CustomAssetTypeRegistered

• **CustomAssetTypeRegistered** = ``"CustomAssetTypeRegistered"``

#### Defined in

[middleware/types.ts:788](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L788)

___

### DefaultEnactmentPeriodChanged

• **DefaultEnactmentPeriodChanged** = ``"DefaultEnactmentPeriodChanged"``

#### Defined in

[middleware/types.ts:829](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L829)

___

### DefaultTargetIdentitiesChanged

• **DefaultTargetIdentitiesChanged** = ``"DefaultTargetIdentitiesChanged"``

#### Defined in

[middleware/types.ts:811](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L811)

___

### DefaultWithholdingTaxChanged

• **DefaultWithholdingTaxChanged** = ``"DefaultWithholdingTaxChanged"``

#### Defined in

[middleware/types.ts:812](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L812)

___

### DidCreated

• **DidCreated** = ``"DidCreated"``

#### Defined in

[middleware/types.ts:678](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L678)

___

### DidStatus

• **DidStatus** = ``"DidStatus"``

#### Defined in

[middleware/types.ts:920](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L920)

___

### DidWithholdingTaxChanged

• **DidWithholdingTaxChanged** = ``"DidWithholdingTaxChanged"``

#### Defined in

[middleware/types.ts:813](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L813)

___

### Dispatched

• **Dispatched** = ``"Dispatched"``

#### Defined in

[middleware/types.ts:854](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L854)

___

### DividendCanceled

• **DividendCanceled** = ``"DividendCanceled"``

#### Defined in

[middleware/types.ts:938](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L938)

___

### DividendCreated

• **DividendCreated** = ``"DividendCreated"``

#### Defined in

[middleware/types.ts:939](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L939)

___

### DividendPaidOutToUser

• **DividendPaidOutToUser** = ``"DividendPaidOutToUser"``

#### Defined in

[middleware/types.ts:940](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L940)

___

### DividendRemainingClaimed

• **DividendRemainingClaimed** = ``"DividendRemainingClaimed"``

#### Defined in

[middleware/types.ts:941](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L941)

___

### DivisibilityChanged

• **DivisibilityChanged** = ``"DivisibilityChanged"``

#### Defined in

[middleware/types.ts:772](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L772)

___

### DocumentAdded

• **DocumentAdded** = ``"DocumentAdded"``

#### Defined in

[middleware/types.ts:782](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L782)

___

### DocumentRemoved

• **DocumentRemoved** = ``"DocumentRemoved"``

#### Defined in

[middleware/types.ts:783](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L783)

___

### Dummy

• **Dummy** = ``"Dummy"``

#### Defined in

[middleware/types.ts:711](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L711)

___

### Endowed

• **Endowed** = ``"Endowed"``

#### Defined in

[middleware/types.ts:672](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L672)

___

### EraPayout

• **EraPayout** = ``"EraPayout"``

#### Defined in

[middleware/types.ts:739](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L739)

___

### Evicted

• **Evicted** = ``"Evicted"``

#### Defined in

[middleware/types.ts:942](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L942)

___

### Executed

• **Executed** = ``"Executed"``

#### Defined in

[middleware/types.ts:701](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L701)

___

### ExecutionCancellingFailed

• **ExecutionCancellingFailed** = ``"ExecutionCancellingFailed"``

#### Defined in

[middleware/types.ts:842](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L842)

___

### ExecutionScheduled

• **ExecutionScheduled** = ``"ExecutionScheduled"``

#### Defined in

[middleware/types.ts:828](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L828)

___

### ExecutionSchedulingFailed

• **ExecutionSchedulingFailed** = ``"ExecutionSchedulingFailed"``

#### Defined in

[middleware/types.ts:839](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L839)

___

### ExemptedUpdated

• **ExemptedUpdated** = ``"ExemptedUpdated"``

#### Defined in

[middleware/types.ts:731](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L731)

___

### ExemptionListModified

• **ExemptionListModified** = ``"ExemptionListModified"``

#### Defined in

[middleware/types.ts:943](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L943)

___

### ExemptionsAdded

• **ExemptionsAdded** = ``"ExemptionsAdded"``

#### Defined in

[middleware/types.ts:879](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L879)

___

### ExemptionsRemoved

• **ExemptionsRemoved** = ``"ExemptionsRemoved"``

#### Defined in

[middleware/types.ts:880](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L880)

___

### ExpiresAfterUpdated

• **ExpiresAfterUpdated** = ``"ExpiresAfterUpdated"``

#### Defined in

[middleware/types.ts:703](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L703)

___

### ExpiryScheduled

• **ExpiryScheduled** = ``"ExpiryScheduled"``

#### Defined in

[middleware/types.ts:840](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L840)

___

### ExpirySchedulingFailed

• **ExpirySchedulingFailed** = ``"ExpirySchedulingFailed"``

#### Defined in

[middleware/types.ts:841](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L841)

___

### ExtensionAdded

• **ExtensionAdded** = ``"ExtensionAdded"``

#### Defined in

[middleware/types.ts:944](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L944)

___

### ExtensionArchived

• **ExtensionArchived** = ``"ExtensionArchived"``

#### Defined in

[middleware/types.ts:945](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L945)

___

### ExtensionRemoved

• **ExtensionRemoved** = ``"ExtensionRemoved"``

#### Defined in

[middleware/types.ts:784](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L784)

___

### ExtensionUnArchive

• **ExtensionUnArchive** = ``"ExtensionUnArchive"``

#### Defined in

[middleware/types.ts:946](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L946)

___

### ExtrinsicFailed

• **ExtrinsicFailed** = ``"ExtrinsicFailed"``

#### Defined in

[middleware/types.ts:664](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L664)

___

### ExtrinsicSuccess

• **ExtrinsicSuccess** = ``"ExtrinsicSuccess"``

#### Defined in

[middleware/types.ts:663](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L663)

___

### FeeCharged

• **FeeCharged** = ``"FeeCharged"``

#### Defined in

[middleware/types.ts:851](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L851)

___

### FeeSet

• **FeeSet** = ``"FeeSet"``

#### Defined in

[middleware/types.ts:849](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L849)

___

### FinalVotes

• **FinalVotes** = ``"FinalVotes"``

#### Defined in

[middleware/types.ts:698](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L698)

___

### FreezeAdminAdded

• **FreezeAdminAdded** = ``"FreezeAdminAdded"``

#### Defined in

[middleware/types.ts:736](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L736)

___

### FreezeAdminRemoved

• **FreezeAdminRemoved** = ``"FreezeAdminRemoved"``

#### Defined in

[middleware/types.ts:737](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L737)

___

### Frozen

• **Frozen** = ``"Frozen"``

#### Defined in

[middleware/types.ts:727](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L727)

___

### FrozenTx

• **FrozenTx** = ``"FrozenTx"``

#### Defined in

[middleware/types.ts:729](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L729)

___

### FundingRoundSet

• **FundingRoundSet** = ``"FundingRoundSet"``

#### Defined in

[middleware/types.ts:781](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L781)

___

### FundraiserClosed

• **FundraiserClosed** = ``"FundraiserClosed"``

#### Defined in

[middleware/types.ts:892](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L892)

___

### FundraiserCreated

• **FundraiserCreated** = ``"FundraiserCreated"``

#### Defined in

[middleware/types.ts:887](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L887)

___

### FundraiserFrozen

• **FundraiserFrozen** = ``"FundraiserFrozen"``

#### Defined in

[middleware/types.ts:889](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L889)

___

### FundraiserUnfrozen

• **FundraiserUnfrozen** = ``"FundraiserUnfrozen"``

#### Defined in

[middleware/types.ts:890](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L890)

___

### FundraiserWindowModifed

• **FundraiserWindowModifed** = ``"FundraiserWindowModifed"``

#### Defined in

[middleware/types.ts:947](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L947)

___

### FundraiserWindowModified

• **FundraiserWindowModified** = ``"FundraiserWindowModified"``

#### Defined in

[middleware/types.ts:891](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L891)

___

### FundsRaised

• **FundsRaised** = ``"FundsRaised"``

#### Defined in

[middleware/types.ts:948](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L948)

___

### GlobalCommissionUpdated

• **GlobalCommissionUpdated** = ``"GlobalCommissionUpdated"``

#### Defined in

[middleware/types.ts:949](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L949)

___

### GroupChanged

• **GroupChanged** = ``"GroupChanged"``

#### Defined in

[middleware/types.ts:904](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L904)

___

### GroupCreated

• **GroupCreated** = ``"GroupCreated"``

#### Defined in

[middleware/types.ts:900](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L900)

___

### GroupPermissionsUpdated

• **GroupPermissionsUpdated** = ``"GroupPermissionsUpdated"``

#### Defined in

[middleware/types.ts:901](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L901)

___

### HeartbeatReceived

• **HeartbeatReceived** = ``"HeartbeatReceived"``

#### Defined in

[middleware/types.ts:761](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L761)

___

### HistoricalPipsPruned

• **HistoricalPipsPruned** = ``"HistoricalPipsPruned"``

#### Defined in

[middleware/types.ts:823](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L823)

___

### IdentifiersUpdated

• **IdentifiersUpdated** = ``"IdentifiersUpdated"``

#### Defined in

[middleware/types.ts:771](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L771)

___

### IndexAssigned

• **IndexAssigned** = ``"IndexAssigned"``

#### Defined in

[middleware/types.ts:669](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L669)

___

### IndexFreed

• **IndexFreed** = ``"IndexFreed"``

#### Defined in

[middleware/types.ts:670](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L670)

___

### IndexFrozen

• **IndexFrozen** = ``"IndexFrozen"``

#### Defined in

[middleware/types.ts:671](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L671)

___

### IndividualCommissionEnabled

• **IndividualCommissionEnabled** = ``"IndividualCommissionEnabled"``

#### Defined in

[middleware/types.ts:950](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L950)

___

### Instantiated

• **Instantiated** = ``"Instantiated"``

#### Defined in

[middleware/types.ts:910](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L910)

___

### InstantiationFeeChanged

• **InstantiationFeeChanged** = ``"InstantiationFeeChanged"``

#### Defined in

[middleware/types.ts:951](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L951)

___

### InstantiationFreezed

• **InstantiationFreezed** = ``"InstantiationFreezed"``

#### Defined in

[middleware/types.ts:952](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L952)

___

### InstantiationUnFreezed

• **InstantiationUnFreezed** = ``"InstantiationUnFreezed"``

#### Defined in

[middleware/types.ts:953](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L953)

___

### InstructionAffirmed

• **InstructionAffirmed** = ``"InstructionAffirmed"``

#### Defined in

[middleware/types.ts:862](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L862)

___

### InstructionAuthorized

• **InstructionAuthorized** = ``"InstructionAuthorized"``

#### Defined in

[middleware/types.ts:859](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L859)

___

### InstructionCreated

• **InstructionCreated** = ``"InstructionCreated"``

#### Defined in

[middleware/types.ts:861](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L861)

___

### InstructionExecuted

• **InstructionExecuted** = ``"InstructionExecuted"``

#### Defined in

[middleware/types.ts:873](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L873)

___

### InstructionFailed

• **InstructionFailed** = ``"InstructionFailed"``

#### Defined in

[middleware/types.ts:872](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L872)

___

### InstructionRejected

• **InstructionRejected** = ``"InstructionRejected"``

#### Defined in

[middleware/types.ts:864](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L864)

___

### InstructionRescheduled

• **InstructionRescheduled** = ``"InstructionRescheduled"``

#### Defined in

[middleware/types.ts:876](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L876)

___

### InstructionUnauthorized

• **InstructionUnauthorized** = ``"InstructionUnauthorized"``

#### Defined in

[middleware/types.ts:860](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L860)

___

### InvalidatedNominators

• **InvalidatedNominators** = ``"InvalidatedNominators"``

#### Defined in

[middleware/types.ts:751](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L751)

___

### Invested

• **Invested** = ``"Invested"``

#### Defined in

[middleware/types.ts:888](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L888)

___

### InvestorUniquenessClaimNotAllowed

• **InvestorUniquenessClaimNotAllowed** = ``"InvestorUniquenessClaimNotAllowed"``

#### Defined in

[middleware/types.ts:954](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L954)

___

### IsIssuable

• **IsIssuable** = ``"IsIssuable"``

#### Defined in

[middleware/types.ts:774](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L774)

___

### Issued

• **Issued** = ``"Issued"``

#### Defined in

[middleware/types.ts:768](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L768)

___

### ItnRewardClaimed

• **ItnRewardClaimed** = ``"ItnRewardClaimed"``

#### Defined in

[middleware/types.ts:909](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L909)

___

### KeyChanged

• **KeyChanged** = ``"KeyChanged"``

#### Defined in

[middleware/types.ts:765](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L765)

___

### KilledAccount

• **KilledAccount** = ``"KilledAccount"``

#### Defined in

[middleware/types.ts:667](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L667)

___

### LegFailedExecution

• **LegFailedExecution** = ``"LegFailedExecution"``

#### Defined in

[middleware/types.ts:871](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L871)

___

### MasterKeyUpdated

• **MasterKeyUpdated** = ``"MasterKeyUpdated"``

#### Defined in

[middleware/types.ts:955](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L955)

___

### MaxDetailsLengthChanged

• **MaxDetailsLengthChanged** = ``"MaxDetailsLengthChanged"``

#### Defined in

[middleware/types.ts:810](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L810)

___

### MaxPipSkipCountChanged

• **MaxPipSkipCountChanged** = ``"MaxPipSkipCountChanged"``

#### Defined in

[middleware/types.ts:832](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L832)

___

### MaximumSchedulesComplexityChanged

• **MaximumSchedulesComplexityChanged** = ``"MaximumSchedulesComplexityChanged"``

#### Defined in

[middleware/types.ts:798](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L798)

___

### MemberAdded

• **MemberAdded** = ``"MemberAdded"``

#### Defined in

[middleware/types.ts:705](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L705)

___

### MemberRemoved

• **MemberRemoved** = ``"MemberRemoved"``

#### Defined in

[middleware/types.ts:706](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L706)

___

### MemberRevoked

• **MemberRevoked** = ``"MemberRevoked"``

#### Defined in

[middleware/types.ts:707](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L707)

___

### MembersReset

• **MembersReset** = ``"MembersReset"``

#### Defined in

[middleware/types.ts:709](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L709)

___

### MembersSwapped

• **MembersSwapped** = ``"MembersSwapped"``

#### Defined in

[middleware/types.ts:708](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L708)

___

### MetaChanged

• **MetaChanged** = ``"MetaChanged"``

#### Defined in

[middleware/types.ts:821](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L821)

___

### MinimumBondThresholdUpdated

• **MinimumBondThresholdUpdated** = ``"MinimumBondThresholdUpdated"``

#### Defined in

[middleware/types.ts:753](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L753)

___

### MinimumProposalDepositChanged

• **MinimumProposalDepositChanged** = ``"MinimumProposalDepositChanged"``

#### Defined in

[middleware/types.ts:830](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L830)

___

### MockInvestorUidCreated

• **MockInvestorUidCreated** = ``"MockInvestorUIDCreated"``

#### Defined in

[middleware/types.ts:919](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L919)

___

### MovedBetweenPortfolios

• **MovedBetweenPortfolios** = ``"MovedBetweenPortfolios"``

#### Defined in

[middleware/types.ts:845](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L845)

___

### MultiSigCreated

• **MultiSigCreated** = ``"MultiSigCreated"``

#### Defined in

[middleware/types.ts:712](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L712)

___

### MultiSigSignaturesRequiredChanged

• **MultiSigSignaturesRequiredChanged** = ``"MultiSigSignaturesRequiredChanged"``

#### Defined in

[middleware/types.ts:718](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L718)

___

### MultiSigSignerAdded

• **MultiSigSignerAdded** = ``"MultiSigSignerAdded"``

#### Defined in

[middleware/types.ts:715](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L715)

___

### MultiSigSignerAuthorized

• **MultiSigSignerAuthorized** = ``"MultiSigSignerAuthorized"``

#### Defined in

[middleware/types.ts:716](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L716)

___

### MultiSigSignerRemoved

• **MultiSigSignerRemoved** = ``"MultiSigSignerRemoved"``

#### Defined in

[middleware/types.ts:717](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L717)

___

### NewAccount

• **NewAccount** = ``"NewAccount"``

#### Defined in

[middleware/types.ts:666](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L666)

___

### NewAssetRuleCreated

• **NewAssetRuleCreated** = ``"NewAssetRuleCreated"``

#### Defined in

[middleware/types.ts:956](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L956)

___

### NewAuthorities

• **NewAuthorities** = ``"NewAuthorities"``

#### Defined in

[middleware/types.ts:758](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L758)

___

### NewSession

• **NewSession** = ``"NewSession"``

#### Defined in

[middleware/types.ts:757](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L757)

___

### Nominated

• **Nominated** = ``"Nominated"``

#### Defined in

[middleware/types.ts:747](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L747)

___

### Noted

• **Noted** = ``"Noted"``

#### Defined in

[middleware/types.ts:916](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L916)

___

### OffChainAuthorizationRevoked

• **OffChainAuthorizationRevoked** = ``"OffChainAuthorizationRevoked"``

#### Defined in

[middleware/types.ts:957](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L957)

___

### Offence

• **Offence** = ``"Offence"``

#### Defined in

[middleware/types.ts:756](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L756)

___

### OldSlashingReportDiscarded

• **OldSlashingReportDiscarded** = ``"OldSlashingReportDiscarded"``

#### Defined in

[middleware/types.ts:742](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L742)

___

### Paused

• **Paused** = ``"Paused"``

#### Defined in

[middleware/types.ts:759](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L759)

___

### PendingPipExpiryChanged

• **PendingPipExpiryChanged** = ``"PendingPipExpiryChanged"``

#### Defined in

[middleware/types.ts:831](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L831)

___

### PermissionedIdentityAdded

• **PermissionedIdentityAdded** = ``"PermissionedIdentityAdded"``

#### Defined in

[middleware/types.ts:749](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L749)

___

### PermissionedIdentityRemoved

• **PermissionedIdentityRemoved** = ``"PermissionedIdentityRemoved"``

#### Defined in

[middleware/types.ts:750](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L750)

___

### PermissionedValidatorAdded

• **PermissionedValidatorAdded** = ``"PermissionedValidatorAdded"``

#### Defined in

[middleware/types.ts:958](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L958)

___

### PermissionedValidatorRemoved

• **PermissionedValidatorRemoved** = ``"PermissionedValidatorRemoved"``

#### Defined in

[middleware/types.ts:959](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L959)

___

### PermissionedValidatorStatusChanged

• **PermissionedValidatorStatusChanged** = ``"PermissionedValidatorStatusChanged"``

#### Defined in

[middleware/types.ts:960](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L960)

___

### PipClosed

• **PipClosed** = ``"PipClosed"``

#### Defined in

[middleware/types.ts:827](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L827)

___

### PipSkipped

• **PipSkipped** = ``"PipSkipped"``

#### Defined in

[middleware/types.ts:837](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L837)

___

### PortfolioCreated

• **PortfolioCreated** = ``"PortfolioCreated"``

#### Defined in

[middleware/types.ts:843](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L843)

___

### PortfolioCustodianChanged

• **PortfolioCustodianChanged** = ``"PortfolioCustodianChanged"``

#### Defined in

[middleware/types.ts:848](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L848)

___

### PortfolioDeleted

• **PortfolioDeleted** = ``"PortfolioDeleted"``

#### Defined in

[middleware/types.ts:844](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L844)

___

### PortfolioRenamed

• **PortfolioRenamed** = ``"PortfolioRenamed"``

#### Defined in

[middleware/types.ts:846](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L846)

___

### PrimaryIssuanceAgentTransfered

• **PrimaryIssuanceAgentTransfered** = ``"PrimaryIssuanceAgentTransfered"``

#### Defined in

[middleware/types.ts:961](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L961)

___

### PrimaryIssuanceAgentTransferred

• **PrimaryIssuanceAgentTransferred** = ``"PrimaryIssuanceAgentTransferred"``

#### Defined in

[middleware/types.ts:962](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L962)

___

### PrimaryKeyUpdated

• **PrimaryKeyUpdated** = ``"PrimaryKeyUpdated"``

#### Defined in

[middleware/types.ts:683](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L683)

___

### ProposalAdded

• **ProposalAdded** = ``"ProposalAdded"``

#### Defined in

[middleware/types.ts:713](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L713)

___

### ProposalApproved

• **ProposalApproved** = ``"ProposalApproved"``

#### Defined in

[middleware/types.ts:719](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L719)

___

### ProposalBondAdjusted

• **ProposalBondAdjusted** = ``"ProposalBondAdjusted"``

#### Defined in

[middleware/types.ts:963](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L963)

___

### ProposalCoolOffPeriodChanged

• **ProposalCoolOffPeriodChanged** = ``"ProposalCoolOffPeriodChanged"``

#### Defined in

[middleware/types.ts:964](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L964)

___

### ProposalCreated

• **ProposalCreated** = ``"ProposalCreated"``

#### Defined in

[middleware/types.ts:824](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L824)

___

### ProposalDetailsAmended

• **ProposalDetailsAmended** = ``"ProposalDetailsAmended"``

#### Defined in

[middleware/types.ts:965](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L965)

___

### ProposalDurationChanged

• **ProposalDurationChanged** = ``"ProposalDurationChanged"``

#### Defined in

[middleware/types.ts:966](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L966)

___

### ProposalExecuted

• **ProposalExecuted** = ``"ProposalExecuted"``

#### Defined in

[middleware/types.ts:714](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L714)

___

### ProposalExecutionFailed

• **ProposalExecutionFailed** = ``"ProposalExecutionFailed"``

#### Defined in

[middleware/types.ts:722](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L722)

___

### ProposalRefund

• **ProposalRefund** = ``"ProposalRefund"``

#### Defined in

[middleware/types.ts:834](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L834)

___

### ProposalRejected

• **ProposalRejected** = ``"ProposalRejected"``

#### Defined in

[middleware/types.ts:721](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L721)

___

### ProposalRejectionVote

• **ProposalRejectionVote** = ``"ProposalRejectionVote"``

#### Defined in

[middleware/types.ts:720](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L720)

___

### ProposalStateUpdated

• **ProposalStateUpdated** = ``"ProposalStateUpdated"``

#### Defined in

[middleware/types.ts:825](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L825)

___

### Proposed

• **Proposed** = ``"Proposed"``

#### Defined in

[middleware/types.ts:696](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L696)

___

### PutCodeFlagChanged

• **PutCodeFlagChanged** = ``"PutCodeFlagChanged"``

#### Defined in

[middleware/types.ts:967](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L967)

___

### QuorumThresholdChanged

• **QuorumThresholdChanged** = ``"QuorumThresholdChanged"``

#### Defined in

[middleware/types.ts:968](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L968)

___

### RangeChanged

• **RangeChanged** = ``"RangeChanged"``

#### Defined in

[middleware/types.ts:820](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L820)

___

### RangeProofAdded

• **RangeProofAdded** = ``"RangeProofAdded"``

#### Defined in

[middleware/types.ts:969](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L969)

___

### RangeProofVerified

• **RangeProofVerified** = ``"RangeProofVerified"``

#### Defined in

[middleware/types.ts:970](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L970)

___

### RcvChanged

• **RcvChanged** = ``"RCVChanged"``

#### Defined in

[middleware/types.ts:822](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L822)

___

### ReceiptClaimed

• **ReceiptClaimed** = ``"ReceiptClaimed"``

#### Defined in

[middleware/types.ts:865](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L865)

___

### ReceiptUnclaimed

• **ReceiptUnclaimed** = ``"ReceiptUnclaimed"``

#### Defined in

[middleware/types.ts:867](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L867)

___

### ReceiptValidityChanged

• **ReceiptValidityChanged** = ``"ReceiptValidityChanged"``

#### Defined in

[middleware/types.ts:866](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L866)

___

### Reclaimed

• **Reclaimed** = ``"Reclaimed"``

#### Defined in

[middleware/types.ts:795](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L795)

___

### RecordDateChanged

• **RecordDateChanged** = ``"RecordDateChanged"``

#### Defined in

[middleware/types.ts:818](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L818)

___

### Redeemed

• **Redeemed** = ``"Redeemed"``

#### Defined in

[middleware/types.ts:769](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L769)

___

### ReferendumCreated

• **ReferendumCreated** = ``"ReferendumCreated"``

#### Defined in

[middleware/types.ts:971](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L971)

___

### ReferendumScheduled

• **ReferendumScheduled** = ``"ReferendumScheduled"``

#### Defined in

[middleware/types.ts:972](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L972)

___

### ReferendumStateUpdated

• **ReferendumStateUpdated** = ``"ReferendumStateUpdated"``

#### Defined in

[middleware/types.ts:973](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L973)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"RegisterAssetMetadataGlobalType"``

#### Defined in

[middleware/types.ts:792](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L792)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"RegisterAssetMetadataLocalType"``

#### Defined in

[middleware/types.ts:791](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L791)

___

### Rejected

• **Rejected** = ``"Rejected"``

#### Defined in

[middleware/types.ts:700](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L700)

___

### ReleaseCoordinatorUpdated

• **ReleaseCoordinatorUpdated** = ``"ReleaseCoordinatorUpdated"``

#### Defined in

[middleware/types.ts:702](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L702)

___

### Remarked

• **Remarked** = ``"Remarked"``

#### Defined in

[middleware/types.ts:668](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L668)

___

### Removed

• **Removed** = ``"Removed"``

#### Defined in

[middleware/types.ts:796](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L796)

___

### RemovedPayingKey

• **RemovedPayingKey** = ``"RemovedPayingKey"``

#### Defined in

[middleware/types.ts:907](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L907)

___

### Requested

• **Requested** = ``"Requested"``

#### Defined in

[middleware/types.ts:917](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L917)

___

### ReserveRepatriated

• **ReserveRepatriated** = ``"ReserveRepatriated"``

#### Defined in

[middleware/types.ts:677](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L677)

___

### Reserved

• **Reserved** = ``"Reserved"``

#### Defined in

[middleware/types.ts:675](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L675)

___

### Restored

• **Restored** = ``"Restored"``

#### Defined in

[middleware/types.ts:974](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L974)

___

### Resumed

• **Resumed** = ``"Resumed"``

#### Defined in

[middleware/types.ts:760](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L760)

___

### Reward

• **Reward** = ``"Reward"``

#### Defined in

[middleware/types.ts:740](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L740)

___

### RewardPaymentSchedulingInterrupted

• **RewardPaymentSchedulingInterrupted** = ``"RewardPaymentSchedulingInterrupted"``

#### Defined in

[middleware/types.ts:754](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L754)

___

### ScheduleCreated

• **ScheduleCreated** = ``"ScheduleCreated"``

#### Defined in

[middleware/types.ts:799](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L799)

___

### ScheduleRemoved

• **ScheduleRemoved** = ``"ScheduleRemoved"``

#### Defined in

[middleware/types.ts:800](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L800)

___

### ScheduleUpdated

• **ScheduleUpdated** = ``"ScheduleUpdated"``

#### Defined in

[middleware/types.ts:975](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L975)

___

### Scheduled

• **Scheduled** = ``"Scheduled"``

#### Defined in

[middleware/types.ts:852](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L852)

___

### SchedulingFailed

• **SchedulingFailed** = ``"SchedulingFailed"``

#### Defined in

[middleware/types.ts:875](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L875)

___

### SecondaryKeyLeftIdentity

• **SecondaryKeyLeftIdentity** = ``"SecondaryKeyLeftIdentity"``

#### Defined in

[middleware/types.ts:681](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L681)

___

### SecondaryKeyPermissionsUpdated

• **SecondaryKeyPermissionsUpdated** = ``"SecondaryKeyPermissionsUpdated"``

#### Defined in

[middleware/types.ts:682](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L682)

___

### SecondaryKeysAdded

• **SecondaryKeysAdded** = ``"SecondaryKeysAdded"``

#### Defined in

[middleware/types.ts:679](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L679)

___

### SecondaryKeysFrozen

• **SecondaryKeysFrozen** = ``"SecondaryKeysFrozen"``

#### Defined in

[middleware/types.ts:694](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L694)

___

### SecondaryKeysRemoved

• **SecondaryKeysRemoved** = ``"SecondaryKeysRemoved"``

#### Defined in

[middleware/types.ts:680](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L680)

___

### SecondaryKeysUnfrozen

• **SecondaryKeysUnfrozen** = ``"SecondaryKeysUnfrozen"``

#### Defined in

[middleware/types.ts:695](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L695)

___

### SecondaryPermissionsUpdated

• **SecondaryPermissionsUpdated** = ``"SecondaryPermissionsUpdated"``

#### Defined in

[middleware/types.ts:976](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L976)

___

### SetAssetMetadataValue

• **SetAssetMetadataValue** = ``"SetAssetMetadataValue"``

#### Defined in

[middleware/types.ts:789](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L789)

___

### SetAssetMetadataValueDetails

• **SetAssetMetadataValueDetails** = ``"SetAssetMetadataValueDetails"``

#### Defined in

[middleware/types.ts:790](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L790)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"SetAssetTransferCompliance"``

#### Defined in

[middleware/types.ts:884](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L884)

___

### SignerLeft

• **SignerLeft** = ``"SignerLeft"``

#### Defined in

[middleware/types.ts:977](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L977)

___

### SigningKeysAdded

• **SigningKeysAdded** = ``"SigningKeysAdded"``

#### Defined in

[middleware/types.ts:978](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L978)

___

### SigningKeysFrozen

• **SigningKeysFrozen** = ``"SigningKeysFrozen"``

#### Defined in

[middleware/types.ts:979](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L979)

___

### SigningKeysRemoved

• **SigningKeysRemoved** = ``"SigningKeysRemoved"``

#### Defined in

[middleware/types.ts:980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L980)

___

### SigningKeysUnfrozen

• **SigningKeysUnfrozen** = ``"SigningKeysUnfrozen"``

#### Defined in

[middleware/types.ts:981](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L981)

___

### SigningPermissionsUpdated

• **SigningPermissionsUpdated** = ``"SigningPermissionsUpdated"``

#### Defined in

[middleware/types.ts:982](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L982)

___

### Slash

• **Slash** = ``"Slash"``

#### Defined in

[middleware/types.ts:741](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L741)

___

### SlashingAllowedForChanged

• **SlashingAllowedForChanged** = ``"SlashingAllowedForChanged"``

#### Defined in

[middleware/types.ts:755](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L755)

___

### SlashingParamsUpdated

• **SlashingParamsUpdated** = ``"SlashingParamsUpdated"``

#### Defined in

[middleware/types.ts:983](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L983)

___

### SnapshotCleared

• **SnapshotCleared** = ``"SnapshotCleared"``

#### Defined in

[middleware/types.ts:835](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L835)

___

### SnapshotResultsEnacted

• **SnapshotResultsEnacted** = ``"SnapshotResultsEnacted"``

#### Defined in

[middleware/types.ts:838](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L838)

___

### SnapshotTaken

• **SnapshotTaken** = ``"SnapshotTaken"``

#### Defined in

[middleware/types.ts:836](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L836)

___

### SolutionStored

• **SolutionStored** = ``"SolutionStored"``

#### Defined in

[middleware/types.ts:744](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L744)

___

### SomeOffline

• **SomeOffline** = ``"SomeOffline"``

#### Defined in

[middleware/types.ts:763](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L763)

___

### StakingElection

• **StakingElection** = ``"StakingElection"``

#### Defined in

[middleware/types.ts:743](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L743)

___

### StatTypesAdded

• **StatTypesAdded** = ``"StatTypesAdded"``

#### Defined in

[middleware/types.ts:881](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L881)

___

### StatTypesRemoved

• **StatTypesRemoved** = ``"StatTypesRemoved"``

#### Defined in

[middleware/types.ts:882](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L882)

___

### Sudid

• **Sudid** = ``"Sudid"``

#### Defined in

[middleware/types.ts:764](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L764)

___

### SudoAsDone

• **SudoAsDone** = ``"SudoAsDone"``

#### Defined in

[middleware/types.ts:766](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L766)

___

### TemplateInstantiationFeeChanged

• **TemplateInstantiationFeeChanged** = ``"TemplateInstantiationFeeChanged"``

#### Defined in

[middleware/types.ts:984](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L984)

___

### TemplateMetaUrlChanged

• **TemplateMetaUrlChanged** = ``"TemplateMetaUrlChanged"``

#### Defined in

[middleware/types.ts:985](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L985)

___

### TemplateOwnershipTransferred

• **TemplateOwnershipTransferred** = ``"TemplateOwnershipTransferred"``

#### Defined in

[middleware/types.ts:986](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L986)

___

### TemplateUsageFeeChanged

• **TemplateUsageFeeChanged** = ``"TemplateUsageFeeChanged"``

#### Defined in

[middleware/types.ts:987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L987)

___

### Terminated

• **Terminated** = ``"Terminated"``

#### Defined in

[middleware/types.ts:911](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L911)

___

### TickerRegistered

• **TickerRegistered** = ``"TickerRegistered"``

#### Defined in

[middleware/types.ts:775](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L775)

___

### TickerTransferred

• **TickerTransferred** = ``"TickerTransferred"``

#### Defined in

[middleware/types.ts:776](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L776)

___

### TimelockChanged

• **TimelockChanged** = ``"TimelockChanged"``

#### Defined in

[middleware/types.ts:725](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L725)

___

### Transfer

• **Transfer** = ``"Transfer"``

#### Defined in

[middleware/types.ts:767](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L767)

___

### TransferConditionExemptionsAdded

• **TransferConditionExemptionsAdded** = ``"TransferConditionExemptionsAdded"``

#### Defined in

[middleware/types.ts:885](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L885)

___

### TransferConditionExemptionsRemoved

• **TransferConditionExemptionsRemoved** = ``"TransferConditionExemptionsRemoved"``

#### Defined in

[middleware/types.ts:886](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L886)

___

### TransferManagerAdded

• **TransferManagerAdded** = ``"TransferManagerAdded"``

#### Defined in

[middleware/types.ts:877](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L877)

___

### TransferManagerRemoved

• **TransferManagerRemoved** = ``"TransferManagerRemoved"``

#### Defined in

[middleware/types.ts:878](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L878)

___

### TransferWithData

• **TransferWithData** = ``"TransferWithData"``

#### Defined in

[middleware/types.ts:773](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L773)

___

### TreasuryDidSet

• **TreasuryDidSet** = ``"TreasuryDidSet"``

#### Defined in

[middleware/types.ts:988](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L988)

___

### TreasuryDisbursement

• **TreasuryDisbursement** = ``"TreasuryDisbursement"``

#### Defined in

[middleware/types.ts:893](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L893)

___

### TreasuryDisbursementFailed

• **TreasuryDisbursementFailed** = ``"TreasuryDisbursementFailed"``

#### Defined in

[middleware/types.ts:894](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L894)

___

### TreasuryReimbursement

• **TreasuryReimbursement** = ``"TreasuryReimbursement"``

#### Defined in

[middleware/types.ts:895](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L895)

___

### TrustedDefaultClaimIssuerAdded

• **TrustedDefaultClaimIssuerAdded** = ``"TrustedDefaultClaimIssuerAdded"``

#### Defined in

[middleware/types.ts:808](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L808)

___

### TrustedDefaultClaimIssuerRemoved

• **TrustedDefaultClaimIssuerRemoved** = ``"TrustedDefaultClaimIssuerRemoved"``

#### Defined in

[middleware/types.ts:809](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L809)

___

### TxRemoved

• **TxRemoved** = ``"TxRemoved"``

#### Defined in

[middleware/types.ts:738](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L738)

___

### TxsHandled

• **TxsHandled** = ``"TxsHandled"``

#### Defined in

[middleware/types.ts:733](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L733)

___

### Unbonded

• **Unbonded** = ``"Unbonded"``

#### Defined in

[middleware/types.ts:746](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L746)

___

### UnexpectedError

• **UnexpectedError** = ``"UnexpectedError"``

#### Defined in

[middleware/types.ts:899](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L899)

___

### Unfrozen

• **Unfrozen** = ``"Unfrozen"``

#### Defined in

[middleware/types.ts:728](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L728)

___

### UnfrozenTx

• **UnfrozenTx** = ``"UnfrozenTx"``

#### Defined in

[middleware/types.ts:730](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L730)

___

### Unreserved

• **Unreserved** = ``"Unreserved"``

#### Defined in

[middleware/types.ts:676](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L676)

___

### UpdatedPolyxLimit

• **UpdatedPolyxLimit** = ``"UpdatedPolyxLimit"``

#### Defined in

[middleware/types.ts:908](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L908)

___

### UserPortfolios

• **UserPortfolios** = ``"UserPortfolios"``

#### Defined in

[middleware/types.ts:847](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L847)

___

### VenueCreated

• **VenueCreated** = ``"VenueCreated"``

#### Defined in

[middleware/types.ts:856](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L856)

___

### VenueDetailsUpdated

• **VenueDetailsUpdated** = ``"VenueDetailsUpdated"``

#### Defined in

[middleware/types.ts:857](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L857)

___

### VenueFiltering

• **VenueFiltering** = ``"VenueFiltering"``

#### Defined in

[middleware/types.ts:868](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L868)

___

### VenueTypeUpdated

• **VenueTypeUpdated** = ``"VenueTypeUpdated"``

#### Defined in

[middleware/types.ts:858](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L858)

___

### VenueUnauthorized

• **VenueUnauthorized** = ``"VenueUnauthorized"``

#### Defined in

[middleware/types.ts:874](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L874)

___

### VenueUpdated

• **VenueUpdated** = ``"VenueUpdated"``

#### Defined in

[middleware/types.ts:989](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L989)

___

### VenuesAllowed

• **VenuesAllowed** = ``"VenuesAllowed"``

#### Defined in

[middleware/types.ts:869](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L869)

___

### VenuesBlocked

• **VenuesBlocked** = ``"VenuesBlocked"``

#### Defined in

[middleware/types.ts:870](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L870)

___

### VoteCast

• **VoteCast** = ``"VoteCast"``

#### Defined in

[middleware/types.ts:819](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L819)

___

### VoteEnactReferendum

• **VoteEnactReferendum** = ``"VoteEnactReferendum"``

#### Defined in

[middleware/types.ts:990](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L990)

___

### VoteRejectReferendum

• **VoteRejectReferendum** = ``"VoteRejectReferendum"``

#### Defined in

[middleware/types.ts:991](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L991)

___

### VoteRetracted

• **VoteRetracted** = ``"VoteRetracted"``

#### Defined in

[middleware/types.ts:697](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L697)

___

### VoteThresholdUpdated

• **VoteThresholdUpdated** = ``"VoteThresholdUpdated"``

#### Defined in

[middleware/types.ts:704](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L704)

___

### Voted

• **Voted** = ``"Voted"``

#### Defined in

[middleware/types.ts:826](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L826)

___

### Withdrawn

• **Withdrawn** = ``"Withdrawn"``

#### Defined in

[middleware/types.ts:748](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/types.ts#L748)
